--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ certifi==2020.12.5
 cffi==1.14.4
 cryptography==3.3.1
 decorator==4.4.2
+pexpect==4.8.0
+ptyprocess==0.7.0
 pycparser==2.20
 python-telegram-bot==13.1
 pytz==2020.5
